# pasdf

./: .flake8  .gitignore  .safety-policy.yml  Dockerfile  Makefile  README.md  docker-compose-example.yaml  pyproject.toml  setup_env.sh
.github/workflows/: pr.yaml
airflow/: logger.py
airflow/dags/: dag_update_dwh_worksheet_data.py
airflow/scripts/airflow/: airflow_gs_dwh_update.py
airflow/scripts/dag/: dag_main.py  dag_patterns.py
airflow/tests/: test_logger.py
airflow/tests/airflow/: test_airflow_gs_dwh_update.py
airflow/tests/dwh/: test_dwh_main.py
airflow/tests/gsheets/: test_gs_main.py
docs/getting_started/: setup.md
main/creds/: creds.py
main/dags/: dag_update_dwh_worksheet_data.py
main/scripts/dag/: dag_builder.py  dag_main.py  dag_patterns.py  dag_patterns_builder.py
main/scripts/dwh/: dwh_main.py
main/scripts/etl/: etl_gs_dwh_update.py
main/scripts/gsheets/: gs_main.py
main/sql/psql/: psql_tables_data.sql
main/tests/: test_logger.py
main/tests/tests_dags/: test_imports.py
main/tests/tests_dwh/: test_dwh_main.py
main/tests/tests_etl/: test_etl_gs_dwh_update.py
main/tests/tests_gsheets/: test_gs_main.py
scripts/dwh/: dwh_main.py
scripts/gsheets/: gs_main.py
tests/dwh/: test_dwh_main.py
tests/gsheets/: gs_main_tests.py  test_gs_main.py  tests_gs_main.py
